# WeHelper

./: .gitattributes  .gitignore  CMakeCache.txt  CMakeLists.txt  debug.natvis  main.cpp  开发记录  接口文档.md
HookXlog/: CMakeLists.txt  frida-gum-example.c  frida-gum.h  frida-gum.lib  main.cpp
Net/: NetMain.cpp  NetMain.h
WS/: WS_Main.cpp  WS_Main.h  WS_Server.cpp  WS_Server.h
common/: ByteBuffer.cpp  ByteBuffer.hpp  HVSocket.cpp  HVSocket.h  NetTools.cpp  NetTools.h  ProtobufHelper.cpp  ProtobufHelper.h  Utils.cpp  Utils.h
common/PB_File/: wechat.pb.cc  wechat.pb.h
common/PB_File/proto/: wechat.proto
core/: BuildPackage.cpp  BuildPackage.h  HandleInnerPackage.cpp  HandleInnerPackage.h  WxProtobuf.cpp  WxProtobuf.h
crypto/: AES_GCM.cpp  AES_GCM.h  CryptoTools.cpp  CryptoTools.h
doc/: CCD_report_clinet_check  PSK  getcdndns  newsync.js  下载图片  关注公众号  初始化联系人  发消息分析  同意好友请求  短连接——撤回消息  获取联系人信息  踢出群内成员  邀请群成员
for_test/: CMakeLists.txt  testMain.cpp
frida/: core.cpp  core.h  frida_main.cpp  frida_main.h
include/: SimpleIni.h  frida-core.h  pub_include.h
lib/: libcrypto.lib  openssl.lib  zlibstaticd.lib
we_chat/: CDNPack.cpp  CDNPack.h  WXCGIUrl.h  WXLongLinkMessage.cpp  WXLongLinkMessage.h  WXShortLinkMessage.cpp  WXShortLinkMessage.h  WeChatBridge.cpp  WeChatBridge.h  WsBridge.cpp  WsBridge.h  WsSocket.cpp
